--- a/motion/config.json
+++ b/motion/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Motion1",
+  "name": "Motion_mjpeg",
   "version": "2.1.2",
-  "slug": "motion1",
+  "slug": "motion_mjpeg",
   "description": "A software motion detector that integrates a usb webcam into hass.io",
   "startup": "system",
   "boot": "auto",
@@ -24,8 +24,8 @@
 	"config": "",
   	"videodevice": "/dev/video0",
   	"input": 0,
-  	"width": 640,
-  	"height": 480,
+  	"width": 1280,
+  	"height": 720,
   	"framerate": 2,
   	"text_right": "%Y-%m-%d %T-%q",
   	"target_dir": "/share/motion",
